API breaking change in main
61f7650e changed the name of the Driver
dictionary member to CpuDriver
and PlatformDriver
.
This dictionary member should stay, maybe with a dummy value, so as not to break API. The Driver
member is used in powerprofilesctl (an older version of the tool should run against the new daemon), and gnome-control-center
for debugging.
src/net.hadess.PowerProfiles.xml
should also be updated to mention the new dictionary keys used.
CC: @superm1